[project]
name = "medsearch"
version = "0.1.0"
description = "Local semantic media search (images + video) on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "mlx-embeddings",
  "mlx",
  "pillow",
  "pillow-heif",
  "pyobjc-framework-AVFoundation",
  "pyobjc-framework-CoreMedia",
  "pyobjc-framework-Quartz",
  "pyobjc-framework-Cocoa",
  "imagehash",
  "lancedb",
  "tqdm",
  "numpy",
  "pyarrow",
  "mlx-whisper",
]

[project.optional-dependencies]
dev = ["pytest>=8", "av"]

[project.scripts]
medsearch = "medsearch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medsearch"]
